# tma-starter-app

./: .env.example  .gitignore  Dockerfile.prod  README.md  docker-compose.yaml  pre-push.md  team-working-agreement.md
.github/workflows/: pr.yml
backend/: .flake8  Dockerfile  auth.py  pyproject.toml  server.py
backend/database/: __init__.py  migrations.py
backend/models/: __init__.py  course.py  course_group.py  course_module.py  group.py  module.py  module_post.py  post.py  role.py  user.py  user_course.py  user_group.py  user_modules.py  user_posts.py
backend/routes/: __init__.py  auth.py  courses.py  groups.py  module.py  users.py
backend/schemas/: __init__.py  auth.py  course.py  group.py  module.py  post.py
backend/scripts/: populate.py
backend/scripts/sample_data/: README.md  course_groups.csv  courses.csv  groups.csv  user_groups.csv  users.csv
backend/tests/: README.md  conftest.py  test_auth.py  test_course.py  test_courses.py  test_groups.py  test_modules.py  test_users.py
database/: Dockerfile
mobile/: .env.example  .eslintrc.cjs  .prettierignore  .prettierrc  README.md  app.json  eas.json  jest.config.js  package-lock.json  package.json  theme.ts  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/components/: ErrorBoundary.tsx  InfoBadge.tsx  ProtectedRoute.tsx
mobile/contexts/: AuthContext.tsx
mobile/types/: api.ts
ui/: .dockerignore  .eslintrc.cjs  .prettierignore  Dockerfile  MINIMAL_TEST_SUITE.md  README.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+82 files in other folders)
